# globant_de

./: .gitignore  Dockerfile  README.md  REFACTORING.md  api.py  base.py  departments_above_mean.sql  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
tests/: api.ipynb
util/: eda.ipynb  employees_by_quarter.sql  util.py
